--- a/client/src/components/signup.css
+++ b/client/src/components/signup.css
@@ -2,7 +2,7 @@
   background-color: rgb(70, 70, 70);
 }
 
-.signup-form {
+/* .signup-form {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -11,4 +11,4 @@
   margin: auto;
   height: 100vh;
   min-height: 400px;
-}
+} */
